[package]
name = "yt_play"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = "1.4.16"
fltk-theme = "0.7.2"
http_req = "0.10.1"
regex = "1.10.2"

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev.package."*"]
strip = true
opt-level = 3
codegen-units = 1
