[package]
name = "yt_play"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http_req = "0.14.0"
tabled = "0.19.0"
serde_json = "1.0.140"

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev.package."*"]
strip = true
opt-level = 3
codegen-units = 1
